Fix overflow hidden in NetworkBasicInfo

--- a/src/app/main/pages/profile/network-basic-info/network-basic-info.component.scss
+++ b/src/app/main/pages/profile/network-basic-info/network-basic-info.component.scss
@@ -18,6 +18,12 @@
     background-color: rgba(0, 0, 0, 0.6);
 }
 
+.networks-button-box {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
 .data-box {
     height: 5rem;
     width: 100%;
